# libjpiedm

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  ITERATOR_API.md  JPI_Logfile_Format.md  Makefile  README.md  ToDo.md  logformat.md
.github/workflows/: cmake-multi-platform.yml  cmake-osx-multiplatform.yml  cmake-osx_multiplatform.yml  cmake-ubuntu-multiplatform.yml  cmake-windows-multiplatform.yml  codeql.yml
examples/: callback_example.cpp  header_checksum_generator.cpp  iterator_example.cpp  single_flight_example.cpp
scripts/: pycsv.py
src/: CMakeLists.txt
src/libjpiedm/: CMakeLists.txt  EDMFileHeaders.cpp  EDMFileHeaders.hpp  EDMFlight.cpp  EDMFlight.hpp  EDMFlightFile.cpp  EDMFlightFile.hpp  FileHeaders.cpp  FileHeaders.hpp  Flight.cpp  Flight.hpp  FlightFile.cpp  FlightFile.hpp  FlightIterator.cpp  FlightIterator.hpp  Metadata.cpp  Metadata.hpp  MetricId.hpp  Metrics.cpp  Metrics.hpp  ProtocolConstants.hpp
src/libjpiedm/tests/unit/: iterator_test.cpp
src/parseedmlog/: CommandLineParser.hpp  KmlExporter.cpp  KmlExporter.hpp  MetricUtils.hpp  getopt.h  main.cpp
src/sample_app/: CMakeLists.txt  getopt.cpp  main.cpp
test/: .CMakeLists.txt.swp  830_6cyl.expected  930_6cyl.expected  930_six_cylinder_multiple_flights.expected  CMakeLists.txt
test/it/: 830_6cyl.expected
tests/it/: 700_4cyl.jpi  830_6cyl.expected  830_6cyl.jpi  930_6cyl.expected  930_6cyl.jpi  930_6cyl.trimmed  930_6cyl_turbo.jpi  960_4cyl_twin.jpi  CMakeLists.txt  Flt183.csv  Flt184.csv  Flt185.csv  Flt186.csv  Flt191.csv  Flt53.csv  run_parse_and_compare.cmake
tests/unit/: CMakeLists.txt  api_integration_test.cpp  error_handling_test.cpp  fileheaders_test.cpp  flight_test.cpp  flightfile_test.cpp  iterator_test.cpp  metadata_test.cpp  metrics_test.cpp  stream_validation_test.cpp
